--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
   font-family: "Lora", serif;
 }
 
+a {
+  color: inherit;
+}
+
 .bg-black {
   background-color: rgba(14, 14, 14, 1);
 }
@@ -64,7 +68,25 @@
   text-align: center;
 }
 
+/* BLOG SECTION */
+
 .blog .media img {
   max-width: 200px;
   height: auto;
+}
+
+.px-0 {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+#terms {
+  font-size: 0.75rem;
+}
+
+/*   Catalog section*/
+
+.card1 {
+  height: 55%;
+  width: 75%;
 }
