--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,16 @@
 
 a {
   color: inherit;
+  text-decoration: none;
+}
+
+/* need to add media to make line height 1.5 on smaller screen */
+.demo {
+  font-family: "Domine", serif;
+  font-size: 2rem;
+  letter-spacing: 0.4rem;
+  line-height: 0;
+  padding-top: 1rem;
 }
 
 .bg-black {
@@ -19,16 +29,11 @@ a {
   min-height: 100vh;
 }
 
-.bg-grey {
-  background-color: #cdcdcd;
-  color: black;
+.as {
+  background-color: #000;
+  color: #fff;
   font-weight: 600;
   text-align: center;
-}
-
-.m-right {
-  border: 2px solid #cdcdcd;
-  border-right: 2px solid white;
 }
 
 .underline {
@@ -89,4 +94,16 @@ a {
 .card1 {
   height: 55%;
   width: 75%;
+}
+
+.underline-black {
+  width: 70px;
+  height: 2px;
+  background-color: #000;
+}
+
+.heading {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  font-size: 4rem;
 }
